strongswan-4.3.6
----------------

- The IKEv1 and IKEV2 daemons now check certificate path length constraints.

- More detailed IKEv2 EAP payload information in debug output

- IKEv2 EAP-SIM and EAP-AKA share joint libsimaka library 

- Added required userland changes for proper SHA256 and SHA384/512 in ESP that
  will be introduced with Linux 2.6.33. The "sha256"/"sha2_256" keyword now
  configures the kernel with 128 bit truncation, not the non-standard 96
  bit truncation used by previous releases. To use the old 96 bit truncation
  scheme, the new "sha256_96" proposal keyword has been introduced.

strongswan-4.3.5
----------------

- The IKEv1 pluto daemon can now use SQL-based address pools to deal out
  virtual IP addresses as a Mode Config server. The pool capability has been
  migrated from charon's sql plugin to a new attr-sql plugin which is loaded
  by libstrongswan and which can be used by both daemons either with a SQLite
  or MySQL database and the corresponding plugin.

- Plugin names have been streamlined: EAP plugins now have a dash after eap
  (e.g. eap-sim), as it is used with the --enable-eap-sim ./configure option.
  Plugin configuration sections in strongswan.conf now use the same name as the
  plugin itself (i.e. with a dash). Make sure to update "load" directives and
  the affected plugin sections in existing strongswan.conf files.

- The private/public key parsing and encoding has been split up into
  separate pkcs1, pgp, pem and dnskey plugins. The public key implementation
  plugins gmp, gcrypt and openssl can all make use of them.

- The EAP-AKA plugin can use different backends for USIM/quintuplet
  calculations, very similar to the EAP-SIM plugin. The existing 3GPP2 software
  implementation has been migrated to a separate plugin.

- The IKEv2 daemon charon gained basic PGP support. It can use locally installed
  peer certificates and can issue signatures based on RSA private keys.
